WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290739
[WebGPU] Vertex-vertex memory barriers trigger shader validation errors on iOS
https://bugs.webkit.org/show_bug.cgi?id=290739
Summary
[WebGPU] Vertex-vertex memory barriers trigger shader validation errors on iOS
Mike Wyrzykowski
Reported
2025-03-30 21:34:07 PDT
[WebGPU] Vertex-vertex memory barriers trigger shader validation errors on iOS
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-03-30 21:34:23 PDT
rdar://147951551
Mike Wyrzykowski
Comment 2
2025-03-30 21:42:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43297
Mike Wyrzykowski
Comment 3
2025-03-30 23:17:27 PDT
***
Bug 290740
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2025-03-31 14:56:28 PDT
Committed
292968@main
(b24ae54b1251): <
https://commits.webkit.org/292968@main
> Reviewed commits have been landed. Closing PR #43297 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug