[WebGPU] Vertex-vertex memory barriers trigger shader validation errors on iOS https://bugs.webkit.org/show_bug.cgi?id=290739 rdar://147951551

Reviewed by Tadeu Zagallo.

Vertex-vertex memory barriers can be shown to work reliably on iOS
but fail to work when shader validation is enabled.

Fallback to pass splitting approach when shader validation is enabled.

* LayoutTests/fast/webgpu/regression/repro_290739-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_290739.html: Added.
* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::apple4):

Canonical link: https://commits.webkit.org/292968@main